--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,56 @@
+@charset "UTF-8";
 body {
   min-height: 100vh;
   background: linear-gradient(to bottom right, #1e272e, #485460);
+}
+
+@-ms-viewport {
+  width: device-width;
+}
+
+body, html {
+  margin: 0;
+  text-align: center;
+  font-family: lato;
+  font-size: 16;
+  font-weight: 200;
+  color: #d2dae2;
+}
+
+.qcont {
+  margin: 5px;
+  margin-bottom: 0px;
+  font-size: 20;
+}
+
+.qcont:before, .qcont:after {
+  content: "\0022";
+}
+
+.qname {
+  margin: 25px;
+  margin-top: 2px;
+}
+
+.qname:before {
+  content: "― ";
+  word-spacing: -5px;
+}
+
+.outer {
+  display: table;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.middle {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.inner {
+  margin-left: auto;
+  margin-right: auto;
 }
 /*# sourceMappingURL=main.css.map */
