--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,49 +9,47 @@ body{
     background: linear-gradient(to bottom right, #1e272e, #485460);
 }
 
-@-ms-viewport{
-    width: device-width;
-}
-
-body, html {
-    margin: 0;
-    text-align: center;
-    font-family: lato;
-    font-size: 16;
-    font-weight: 200;
-    color: #d2dae2;
-    //https://flatuicolors.com/palette/se
-}
-.qcont{
-    margin: 5px;
-    margin-bottom: 0px;
-    font-size: 20;
-
-}
-.qcont:before,.qcont:after {
-    content: "\0022";
-}
-.qname{
-    margin: 25px;
-    margin-top: 2px;
-}
-.qname:before {
-    content: "― ";
-    word-spacing: -5px;
-}
-.outer {
-    display: table;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-}
-
-.middle {
-    display: table-cell;
-    vertical-align: middle;
-}
-
-.inner {
-    margin-left: auto;
-    margin-right: auto;
+#quote-page{
+    body, html {
+        margin: 0;
+        font-family: lato;
+        font-size: 16;
+        font-weight: 200;
+        color: #d2dae2;
+        //https://flatuicolors.com/palette/se
+    }
+    .qcont{
+        margin: 5px;
+        margin-bottom: 0px;
+        font-size: 20;
+    
+    }
+    .qcont:before,.qcont:after {
+        content: "\0022";
+    }
+    .qname{
+        margin: 25px;
+        margin-top: 2px;
+    }
+    .qname:before {
+        content: "― ";
+        word-spacing: -5px;
+    }
+    .outer {
+        display: table;
+        position: absolute;
+        height: 100%;
+        width: 100%;
+    }
+    
+    .middle {
+        text-align: center;
+        display: table-cell;
+        vertical-align: middle;
+    }
+    
+    .inner {
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
